# devhelp

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  DIFFERENTIATORS.md  HARDENING_LOG.md  LICENSE  README.md  package-lock.json  package.json  run-regression.sh  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
demo/: devhelp.tape
docs/: FAQ.md  WHY-NOT-MISE.md
src/: agent.ts  banner.ts  cli.ts  detect.ts  lockfile.ts  mcp.ts  offline.ts  platform.ts  recipe.ts  recovery.ts  run-log.ts  secrets.ts  setup.ts  tools.ts  verify.ts  version-managers.ts  versions.ts  vscode.ts
src/detectors/: shared.ts
stress-test/: FAILURE_PATTERNS.md  RETEST_RESULTS.md  SUMMARY.md  container-sweep.sh  with-services-smoke.sh
test/: compose.test.ts  detect-compose.test.ts  detect-fixtures.test.ts  detect-migrations.test.ts  detect-node.test.ts  detect-prisma-seed.test.ts  doctor-version.test.ts  failure-summary.test.ts  lock-drift.test.ts  lockfile.test.ts  mcp.test.ts  npm-ci-fallback.test.ts  platform-windows.test.ts  platform.test.ts  recipe.test.ts  recovery.test.ts  run-offline.test.ts  run-setup.test.ts  shell-injection.test.ts  shell-quoting.test.ts  slow-step-note.test.ts  verify.test.ts  version-managers.test.ts  versions.test.ts  vscode-secrets.test.ts
test-fixtures/: README.md
test-fixtures/android-app/: build.gradle
test-fixtures/ansible/: playbook.yml  requirements.yml
test-fixtures/asdf-project/: Gemfile  (+1 more)
test-fixtures/haskell-cabal/: my-lib.cabal
(+48 files in other folders)
