cabal-version: 3.0
name: my-lib
version: 0.1.0.0
build-type: Simple

common common-options
  ghc-options: -Wall
  default-language: Haskell2010

library
  import: common-options
  exposed-modules: MyLib
  build-depends: base ^>=4.17, text ^>=2.0
  hs-source-dirs: src

test-suite my-lib-test
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends: base, my-lib, hspec
  hs-source-dirs: test
